--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "node ./backend/server.js"
+    "start": "node ./backend/server.js",
+    "dev": "nodemon ./backend/server.js"
   },
   "type": "module",
   "keywords": [],
